Converted to BumpaloVec.
It's really disappointing you can't compare between BumpaloVec and Vec. I assume this is because they're lazy and waiting for the allocator API, so they won't even maintain their forks.

The formatting on the tests is messy, and cargo fmt doesn't make it much better.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.0.1"
 edition = "2021"
 
 [dependencies]
-bumpalo = { version = "3.17.0", features = ["boxed"] }
+bumpalo = { version = "3.17.0", features = ["boxed", "collections"] }
 libc = "0.2.169"
